# ILLIXR

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  illixr_native_lookup.yaml
cmake/: ConfigurationSummary.cmake  GetDepthAI.cmake  GetGTSAM.cmake  GetInfiniTAM.cmake  GetKimeraRPGO.cmake  GetKimera_vio.cmake  GetMonado_vk.cmake  HelperFunctions.cmake
docker/: CMakeLists.txt  README.md  build.sh  build_docker.py  generate_dockerfiles.py  images.py
docker/CentOS/9/: Dockerfile
docker/Fedora/37/: Dockerfile
docker/Fedora/38/: Dockerfile
docker/Ubuntu/20/: Dockerfile
docker/Ubuntu/22/: Dockerfile
docs/docs/: getting_started.md.in  modules.json  unittest.md  writing_your_plugin.md
docs/mkdocs/: mkdocs.yaml.in
include/illixr/: data_format.hpp  opencv_data_types.hpp  sqlite_record_logger.hpp
include/illixr/network/: file_descriptor.hpp  net_config.hpp  socket.hpp
include/illixr/test/: phonebook_mock.hpp
include/illixr/vk/: display_provider.hpp  render_pass.hpp  vulkan_objects.hpp
plugins/: plugins.yaml
plugins/debugview/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/debugview/test/: test_plugin.cpp
plugins/depthai/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/depthai/test/: test_plugin.cpp
plugins/display_vk/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/display_vk/test/: test_plugin.cpp
plugins/fauxpose/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/fauxpose/test/: test_plugin.cpp
plugins/gldemo/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/gldemo/test/: test_plugin.cpp
plugins/ground_truth_slam/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/ground_truth_slam/test/: test_plugin.cpp
plugins/gtsam_integrator/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/gtsam_integrator/test/: test_plugin.cpp
plugins/native_renderer/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/native_renderer/test/: test_plugin.cpp
plugins/newplug/: CMakeLists.txt  plugin.cpp
plugins/offline_cam/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/offline_cam/test/: test_plugin.cpp
plugins/offline_imu/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/offline_imu/test/: test_plugin.cpp
plugins/offline_scannet/: CMakeLists.txt  data_loading.hpp  plugin.cpp
plugins/offline_tum/: CMakeLists.txt  csv_iterator.hpp  data_format.hpp  data_loading.hpp  plugin.cpp
plugins/offload_data/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/offload_data/test/: test_plugin.cpp
plugins/offload_rendering_client/: CMakeLists.txt  plugin.cpp
plugins/offload_rendering_server/: plugin.cpp
plugins/offload_vio/device_rx/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/offload_vio/device_rx/test/: test_plugin.cpp
plugins/offload_vio/device_tx/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/offload_vio/device_tx/test/: test_plugin.cpp
plugins/offload_vio/server_rx/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/offload_vio/server_rx/test/: test_plugin.cpp
plugins/offload_vio/server_tx/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/offload_vio/server_tx/test/: test_plugin.cpp
plugins/openni/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/openni/test/: test_plugin.cpp
plugins/passthrough_integrator/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/passthrough_integrator/test/: test_plugin.cpp
plugins/pose_lookup/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/pose_lookup/test/: test_plugin.cpp
plugins/pose_prediction/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/pose_prediction/test/: test_plugin.cpp
plugins/realsense/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/realsense/test/: test_plugin.cpp
plugins/record_imu_cam/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/record_imu_cam/test/: test_plugin.cpp
plugins/record_rgb_depth/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/record_rgb_depth/test/: test_plugin.cpp
plugins/rk4_integrator/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/rk4_integrator/test/: test_plugin.cpp
plugins/shared_memory_network_backend/: plugin.cpp
plugins/tcp_network_backend/: plugin.cpp
plugins/test/: CMakeLists.txt  mock_app.cpp  mock_display.cpp  mock_pose.cpp  mock_timewarp_vk.cpp  test_macros.hpp
plugins/timewarp_gl/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/timewarp_gl/test/: test_plugin.cpp
plugins/timewarp_vk/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/timewarp_vk/test/: test_plugin.cpp
plugins/vkdemo/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/vkdemo/test/: test_plugin.cpp
plugins/zed/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/zed/test/: test_plugin.cpp
profiles/: ci.yaml  fauxpose.yaml  headless.yaml  monado_gl.yaml  monado_vk.yaml  native_gl.yaml  native_lookup.yaml  native_vk.yaml  offload_device.yaml  offload_monado_vk.yaml  offload_server.yaml  unit-tests.yaml
src/: CMakeLists.txt  runtime_impl.cpp  vulkan_display.cpp
src/tests/: CMakeLists.txt  test_switchboard.cpp
